# Agentino

./: .gitignore  CRA_COMPLIANCE.md  README.md  SBOM.md  SECURITY.md  conanfile.py  sbom.json  sbom.spdx.json
Config/: Agentino.awc
Config/CMake/: AgentinoEnv.cmake
Config/QMake/: Agentino.pri
Docs/Architecture/: AgentServiceTopology.md  AgentinoArchitectureAudit.md  Deploy.md  R7-SmokeChecklist.md  RefactoringCompletionPlan.md  RefactoringProgress.md
Impl/AgentGqlPck/: AgentGqlPck.cpp  AgentGqlPck.h
Impl/AgentGqlPck/CMake/: CMakeLists.txt
Impl/AgentinoAgent/: AgentinoAgent.acc  AgentinoAgent.accl  Main.cpp
Impl/AgentinoClient/: AgentinoClient.acc  AgentinoClient.accl  AgentinoClient.qrc  Main.cpp
Impl/AgentinoClient/CMake/: CMakeLists.txt
Impl/AgentinoClientServer/: AgentinoClientServer.acc  AgentinoClientServer.accl  Main.cpp
Impl/AgentinoClientServer/CMake/: CMakeLists.txt
Impl/AgentinoDataPck/: AgentinoDataPck.cpp  AgentinoDataPck.h
Impl/AgentinoDataPck/CMake/: CMakeLists.txt
Impl/AgentinoGqlPck/: AgentinoGqlPck.cpp  AgentinoGqlPck.h
Impl/AgentinoGqlPck/CMake/: CMakeLists.txt
Impl/AgentinoGqlTests/: AgentinoGqlTests.acc  Main.cpp
Impl/AgentinoGqlTests/CMake/: CMakeLists.txt
Impl/AgentinoLoc/: AgentinoLoc.qrc
Impl/AgentinoServer/: AgentinoFeatures.h  AgentinoServer.acc  AgentinoServer.accl  Main.cpp
Impl/AgentinoServer/CMake/: CMakeLists.txt
Include/agentgql/: CAgentConnectionSubscriberControllerComp.cpp  CAgentConnectionSubscriberControllerComp.h  CAgentGqlRemoteRepresentationControllerComp.cpp  CAgentGqlRemoteRepresentationControllerComp.h  CAgentMessageCollectionControllerComp.cpp  CAgentMessageCollectionControllerComp.h  CAgentRegistrationClientComp.cpp  CAgentRegistrationClientComp.h  CAgentRemoteDocumentRevisionControllerComp.cpp  CAgentRemoteDocumentRevisionControllerComp.h  CAgentRemoteVisualStatusControllerComp.cpp  CAgentRemoteVisualStatusControllerComp.h  CAgentServiceCollectionSyncClientComp.cpp  CAgentServiceCollectionSyncClientComp.h  CAgentServicesRemoteSubscriberProxyComp.cpp  CAgentServicesRemoteSubscriberProxyComp.h  CAgentSettingsControllerComp.cpp  CAgentSettingsControllerComp.h  CAgentTopologyControllerComp.cpp  CAgentTopologyControllerComp.h  CAgentinoSubscriptionClientComp.cpp  CAgentinoSubscriptionClientComp.h  CGetServiceControllerProxyComp.cpp  CGetServiceControllerProxyComp.h  CLocalTopologyControllerComp.cpp  CLocalTopologyControllerComp.h  CMessageCollectionControllerComp.cpp  CMessageCollectionControllerComp.h  CServiceCollectionControllerComp.cpp  CServiceCollectionControllerComp.h  CServiceControllerComp.cpp  CServiceControllerComp.h  CServiceControllerProxyComp.cpp  CServiceControllerProxyComp.h  CServiceLog.h  CServiceLogControllerComp.cpp  CServiceLogControllerComp.h  CServiceLogSubscriberControllerComp.cpp  CServiceLogSubscriberControllerComp.h  CServiceSubscriberControllerComp.cpp  (+17 more)
Include/agentgql/CMake/: CMakeLists.txt
Include/agentino/: Version.h
Include/agentinodata/: CAgentCollectionComp.cpp  CAgentCollectionComp.h  CAgentInfo.cpp  CAgentInfo.h  CAgentServiceCompositeInfoComp.cpp  CAgentServiceCompositeInfoComp.h  CAgentServiceManagerComp.cpp  CAgentServiceManagerComp.h  CAgentStatusInfo.cpp  CAgentStatusInfo.h  CLocalTopologyInfoComp.cpp  CLocalTopologyInfoComp.h  CProcessHostComp.cpp  CProcessHostComp.h  CRepresentationService.cpp  CRepresentationService.h  CService.cpp  CService.h  CServiceCompositeInfoBase.cpp  CServiceCompositeInfoBase.h  CServiceCompositeInfoComp.cpp  CServiceCompositeInfoComp.h  CServiceControllerComp.cpp  CServiceControllerComp.h  CServiceFsm.cpp  CServiceFsm.h  CServiceInfo.cpp  CServiceInfo.h  CServiceInfoRepresentationController.cpp  CServiceInfoRepresentationController.h  CServiceMetaInfo.cpp  CServiceMetaInfo.h  CServiceStatusInfo.cpp  CServiceStatusInfo.h  CServiceSupervisorComp.cpp  CServiceSupervisorComp.h  CServiceTypeCatalogComp.cpp  CServiceTypeCatalogComp.h  CSoftwareUpdateInfo.cpp  CSoftwareUpdateInfo.h  (+41 more)
Include/agentinodata/CMake/: CMakeLists.txt
Include/agentinogql/: CAgentChangeObserverComp.cpp  CAgentChangeObserverComp.h  CAgentCollectionControllerComp.cpp  CAgentCollectionControllerComp.h  CAgentConnectionObserverComp.cpp  CAgentConnectionObserverComp.h  CAgentConnectionSubscriberControllerComp.cpp  CAgentConnectionSubscriberControllerComp.h  CAgentEnrollmentRecord.cpp  CAgentEnrollmentRecord.h  CAgentLocalTopologyProxyComp.cpp  CAgentLocalTopologyProxyComp.h  CAgentTopologyAggregatorComp.cpp  CAgentTopologyAggregatorComp.h  CAgentinoGqlRemoteRepresentationControllerComp.cpp  CAgentinoGqlRemoteRepresentationControllerComp.h  CAgentsSubscriberProxyControllerComp.cpp  CAgentsSubscriberProxyControllerComp.h  CEnrollmentGqlControllerComp.cpp  CEnrollmentGqlControllerComp.h  CEnrollmentStoreComp.cpp  CEnrollmentStoreComp.h  CFileSystemControllerProxyComp.cpp  CFileSystemControllerProxyComp.h  CGetServiceControllerProxyComp.cpp  CGetServiceControllerProxyComp.h  CGqlRepresentationAgentDataComp.cpp  CGqlRepresentationAgentDataComp.h  CMirroredServiceCollectionControllerComp.cpp  CMirroredServiceCollectionControllerComp.h  CRemoveServiceControllerProxyComp.cpp  CRemoveServiceControllerProxyComp.h  CServerServiceCollectionControllerComp.cpp  CServerServiceCollectionControllerComp.h  CServiceCollectionControllerComp.cpp  CServiceCollectionControllerComp.h  CServiceCollectionSubscriberControllerComp.cpp  CServiceCollectionSubscriberControllerComp.h  CServiceControllerProxyComp.cpp  CServiceControllerProxyComp.h  (+21 more)
Include/agentinogql/CMake/: CMakeLists.txt
Include/agentinoqml/: agentino.json  agentinoqml.qrc
Include/agentinoqml/CMake/: CMakeLists.txt
Install/: _Create_VC17_Commercial.bat  _Create_VC17_OpenSource.bat
Install/AgentinoAgent/: install_DebugVC17_64.bat  install_ReleaseVC17_64.bat
Install/AgentinoClient/: AgentinoClient.iss  install_DebugVC16_64.bat  install_ReleaseVC16_64.bat
Install/AgentinoServer/: install_DebugVC17_64.bat  install_ReleaseVC17_64.bat
Partitura/AgentinoAgentVoce.arp/: AgentPages.acc  AgentPages.accl  AgentServer.acc  (+19 more)
(+186 files in other folders)
